# cloudhop

./: README.md  meson.build
data/: Application.css  com.github.bertgoens.cloudhop.appdata.xml  com.github.bertgoens.cloudhop.desktop  com.github.bertgoens.cloudhop.gschema.xml  css.gresource.xml  meson.build
meson/: post_install.py
src/: Application  Application.vala  MainWindow.vala
